...
                  },
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(16),
                child: ElevatedButton(
                  key: Key('apply_filter_button'),
                  onPressed: () {
                    widget.onApply(_tempSelectedFilters);
                  },
                  child: const Text('Apply Filters'),
                  style: ElevatedButton.styleFrom(
                    minimumSize: const Size(double.infinity, 50),
...
