...
                            },
                          ),
                        ),
                      ],
                    ),
          floatingActionButton: FloatingActionButton.extended(
            key: Key('open_filter_sheet_button'),
            onPressed: () {
              showModalBottomSheet(
                context: context,
                isScrollControlled: true,
                shape: const RoundedRectangleBorder(
                  borderRadius: BorderRadius.vertical(top: Radius.circular(16)),
...
